feat: update pipeline (main.nf, config) and add modules/redux.nf

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,9 @@ process {
     // Global process settings
     executor = 'local'
     
+    // Parallel execution settings
+    maxForks = 8  // 최대 8개 샘플 동시 처리
+    
     // Error handling
     errorStrategy = 'retry'
     maxRetries = 2
@@ -31,40 +34,60 @@ process {
     time = { check_max(4.h * task.attempt, 'time') }
     
     // Process-specific configurations
+    withName: 'REDUX' {
+        cpus = 8
+        memory = '64.GB'
+        time = '4.h'
+        errorStrategy = 'retry'
+        maxRetries = 2
+    }
+    
     withName: 'SAGE_PAVE' {
         cpus = 8
         memory = '64.GB'
         time = '6.h'
+        errorStrategy = 'retry'
+        maxRetries = 2
     }
     
     withName: 'AMBER_COBALT' {
         cpus = 8
         memory = '64.GB'
         time = '4.h'
+        errorStrategy = 'retry'
+        maxRetries = 2
     }
     
     withName: 'GRIDSS' {
         cpus = 8
         memory = '128.GB'
         time = '12.h'
+        errorStrategy = 'retry'
+        maxRetries = 2
     }
     
     withName: 'GRIPSS' {
         cpus = 4
         memory = '32.GB'
         time = '2.h'
+        errorStrategy = 'retry'
+        maxRetries = 2
     }
     
     withName: 'PURPLE' {
         cpus = 8
         memory = '64.GB'
         time = '4.h'
+        errorStrategy = 'retry'
+        maxRetries = 2
     }
     
     withName: 'LINX' {
         cpus = 4
         memory = '32.GB'
         time = '2.h'
+        errorStrategy = 'retry'
+        maxRetries = 2
     }
 }
 
